--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>自己紹介</h1>
-    <button onclick="location.href='/test'">ゲーム起動</button>
+    <button onclick="location.href='./test'">ゲーム起動</button>
     <h>
         <h3>加賀春寿</h3>
         <div class="box4">
