--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h3>加賀春寿</h3>
         <div class="box4">
             <p>加賀春寿は人間です</p>
+            <p>プログラマーです</p>
+            <p>気づいたら3年生でした</p>
+            <p>最近迷走しています</p>
+            <p>イカれないよう頑張って耐えます</p>
         </div>
 </body>
 </html>
